# python-project-cookiecutter

./: .gitignore  cookiecutter.json  readme.md
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
