[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [ {name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
package-mode = true
packages = [{ include = "{{cookiecutter.project_slug}}", from = "src" }] # include current project in environment

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
select = ["E", "F"]  # select E and F flake8 rules
extend-select = ["I"]  # sort imports
ignore = []



